@@ -7,7 +7,10 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.12"
+    python: "3.10"
+  apt_packages:
+    - doxygen
+    - graphviz
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
