@@ -5,6 +5,7 @@
  - Support `PQfsize()` and `PQfmod()`. (#727)
  - Implement conversion from `string_view` to string. (#728)
  - Rename `splitconfig` to `splitconfig.py`. (#763)
+ - Document need for conversions more clearly, link to docs. (#757)
 7.8.1
  - Regenerate build files. Should fix ARM Mac build. (#715)
  - Reinstate `<ciso646>` that MSVC can't live with or without. (#713)
